--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: swift
 
 script:
 
-- xcodebuild test -project 'LeetCode.xcodeproj' -scheme Tests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.2' ONLY_ACTIVE_ARCH=NO
+- xcodebuild test -project 'LeetCode.xcodeproj' -scheme Tests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone X,OS=11.4' ONLY_ACTIVE_ARCH=NO
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
