--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode10.0
+osx_image: xcode9.4
 language: swift
+
+install:
+  - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
+
+env:
+  - SWIFT_VERSION=4.0
 
 script:
 
