--- a/LeetCode.xcodeproj/xcshareddata/xcschemes/Tests.xcscheme
+++ b/LeetCode.xcodeproj/xcshareddata/xcschemes/Tests.xcscheme
@@ -11,7 +11,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "913B4656207D38EF00A093AF"
+            BuildableName = "LeetCode.xctest"
+            BlueprintName = "LeetCode"
+            ReferencedContainer = "container:LeetCode.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
